WheelHandler: Round contentX/contentY positions

I'm basically forcing pixel alignment because I don't see a reason not
to when scrolling with a touchpad or mouse wheel. We should ideally also
fix this in Qt so that workarounds like these aren't necessary.

BUG: 449884

https://bugs.kde.org/show_bug.cgi?id=449884